--- a/css/main.scss
+++ b/css/main.scss
@@ -168,7 +168,23 @@ body {
 .main {
     position: relative;
     padding-bottom: 140px;
+    overflow: hidden;
 
+}
+
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+    }
+
+    50% {
+        transform: scale(1.05);
+
+    }
+
+    100% {
+        transform: scale(1);
+    }
 }
 
 .main-bg {
@@ -177,6 +193,7 @@ body {
     top: 0;
     width: 854px;
     height: 1475px;
+    animation: pulse 10s ease-in-out infinite;
 
     img {
         width: 100%;
@@ -365,4 +382,334 @@ body {
     line-height: 100%;
     text-align: center;
     cursor: pointer;
+}
+
+
+.results {
+    padding-left: 100px;
+
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    max-width: 1270px;
+
+}
+
+.result-item {
+    display: flex;
+    border-radius: 40px;
+    background: #FFF;
+    box-shadow: 0px 10px 41.8px 0px #EFD3C4;
+    // display: flex;
+    gap: 56px;
+    padding: 40px 96px 72px 40px;
+    align-items: flex-start;
+    display: none;
+
+    &.show {
+        display: flex;
+        animation: fromOpacity 1.2s ease-in-out forwards;
+    }
+}
+
+
+@keyframes fromOpacity {
+    0% {
+        transform: translateY(20px);
+        opacity: 0;
+    }
+
+    100% {
+        transform: translateY(0px);
+        opacity: 1;
+    }
+}
+
+.result-item__image {
+    flex-shrink: 0;
+    display: flex;
+    width: 230px;
+    height: 230px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    border: 6px solid #F37B20;
+    overflow: hidden;
+
+    img {
+        width: 95%;
+        height: 95%;
+        object-fit: cover;
+        object-position: center;
+    }
+}
+
+.result-item__plate {
+    color: #808080;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 100%;
+    margin-bottom: 32px;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+
+    &::before {
+        border-radius: 20px;
+        background: #F37B20;
+        width: 28px;
+        height: 6px;
+        content: '';
+    }
+
+    &::after {
+        border-radius: 20px;
+        background: #F37B20;
+        width: 28px;
+        height: 6px;
+        content: '';
+    }
+}
+
+.result-item__name {
+    color: #000;
+    font-size: 32px;
+    font-weight: 400;
+    line-height: 100%;
+    margin-bottom: 32px;
+
+}
+
+.result-item__descr {
+    color: #000;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 120%;
+}
+
+
+@media (max-width: 1860px) {
+    .main-bg {
+        width: 38%;
+        height: auto;
+    }
+}
+
+@media (max-width: 1560px) {
+    .main-title-img {
+        width: 550px;
+        height: auto;
+    }
+
+    .main__inner {
+        padding: 140px;
+    }
+
+    .text-container .title {
+        font-size: 42px;
+        margin-bottom: 50px;
+    }
+
+    .text-container .descr {
+        font-size: 22px;
+    }
+
+    .text-container,
+    .results,
+    .forms {
+        padding-left: 50px;
+    }
+}
+
+
+@media (max-width: 1440px) {
+    .main-bg {
+        width: 30%;
+    }
+
+    .text-container {
+        padding-bottom: 100px;
+    }
+
+
+    .results,
+    .forms {
+        padding-left: 0px;
+    }
+
+    .qestion-title,
+    .result-item__name {
+        font-size: 28px;
+    }
+
+    .qestion-description,
+    .result-item__descr {
+        font-size: 18px;
+        line-height: 140%;
+    }
+
+    .answer-item span {
+        font-size: 16px;
+    }
+
+    .qestion-number {
+        font-size: 18px;
+    }
+
+    .form-item {
+        padding: 40px;
+    }
+
+    .qestion-description {
+        margin-bottom: 30px;
+    }
+
+    .qestion-title,
+    .qestion-number,
+    .result-item__name,
+    .result-item__plate {
+        margin-bottom: 25px;
+    }
+
+    .answer-item span {
+        padding: 14px 50px;
+    }
+
+    .forms {
+        max-width: 1100px;
+    }
+
+    .main {
+        padding-bottom: 80px;
+    }
+
+    .submit-btn {
+        padding: 28px;
+        font-size: 26px;
+    }
+
+    .results {
+        max-width: 1100px;
+    }
+
+    .result-item {
+        padding: 40px;
+        gap: 30px;
+    }
+
+    .result-item__image {
+        width: 200px;
+        height: 200px;
+    }
+}
+
+
+@media (max-width: 992px) {
+    .text-container {
+        padding-left: 0;
+        padding-bottom: 60px;
+    }
+
+    .main__inner {
+        padding: 80px 0;
+    }
+}
+
+@media (max-width: 680px) {
+    .result-item {
+        flex-direction: column;
+    }
+
+    .result-item__image {
+        margin: auto;
+    }
+
+    .result-item__plate {
+        justify-content: center;
+    }
+
+    .result-item__name {
+        text-align: center;
+    }
+
+    .result-item__descr {
+        text-align: center;
+    }
+}
+
+
+@media (max-width: 600px) {
+    .text-container .descr {
+        font-size: 18px;
+    }
+
+    .main-title-img {
+        width: 90%;
+    }
+
+    .text-container .title {
+        font-size: 36px;
+        margin-bottom: 30px;
+    }
+
+    .text-container .descr {
+        padding-top: 30px;
+    }
+
+    .container {
+        padding: 0px 15px;
+    }
+
+    .header {
+        padding-top: 20px;
+    }
+
+    .logo {
+        width: 40%;
+        height: auto;
+    }
+
+    .form-item,
+    .result-item {
+        border-radius: 20px;
+        padding: 20px;
+    }
+
+    .qestion-title {
+        font-size: 24px;
+        margin-bottom: 20px;
+    }
+
+    .qestion-description,
+    .result-item__descr {
+        font-size: 16px;
+    }
+
+    .answer-item span {
+        padding-right: 15px;
+        line-height: 120%;
+        padding-left: 36px;
+    }
+
+    .submit-btn {
+        font-size: 22px;
+        padding: 22px;
+    }
+
+    .main {
+        padding-bottom: 40px;
+    }
+
+    .answer-item span::before {
+        left: 10px;
+    }
+
+    .answer-item span::after {
+        left: 15.2px;
+    }
+
+    .qestion-number {
+        margin-bottom: 15px;
+    }
 }
