--- a/css/main.scss
+++ b/css/main.scss
@@ -210,17 +210,17 @@ body {
 
 .text-container {
     max-width: 960px;
-    padding-bottom: 120px;
+    padding-bottom: 100px;
     padding-left: 100px;
 
 
     .title {
-        color: #000;
-        font-size: 50px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 120%;
-        margin-bottom: 72px;
+        // color: #000;
+        // font-size: 50px;
+        // font-style: normal;
+        // font-weight: 400;
+        // line-height: 120%;
+        // margin-bottom: 72px;
     }
 
     .descr {
@@ -506,10 +506,10 @@ body {
         padding: 140px;
     }
 
-    .text-container .title {
-        font-size: 42px;
-        margin-bottom: 50px;
-    }
+    // .text-container .title {
+    //     font-size: 42px;
+    //     margin-bottom: 50px;
+    // }
 
     .text-container .descr {
         font-size: 22px;
@@ -529,7 +529,7 @@ body {
     }
 
     .text-container {
-        padding-bottom: 100px;
+        padding-bottom: 80px;
     }
 
 
@@ -606,6 +606,7 @@ body {
 
 
 @media (max-width: 992px) {
+
     .text-container {
         padding-left: 0;
         padding-bottom: 60px;
@@ -617,6 +618,10 @@ body {
 }
 
 @media (max-width: 680px) {
+    .text-container {
+        padding-bottom: 30px;
+    }
+
     .result-item {
         flex-direction: column;
     }
@@ -648,10 +653,10 @@ body {
         width: 90%;
     }
 
-    .text-container .title {
-        font-size: 36px;
-        margin-bottom: 30px;
-    }
+    // .text-container .title {
+    //     font-size: 36px;
+    //     margin-bottom: 30px;
+    // }
 
     .text-container .descr {
         padding-top: 30px;
